fixing color contrast issues

--- a/chamber/styles/directory.css
+++ b/chamber/styles/directory.css
@@ -570,12 +570,13 @@ section {
     width: auto;
     padding: 10px 20px;
     background-color: var(--color-five);
-    color: var(--color-one);
+    color: black;
     border: thin black;
     border-radius: 8px;
     cursor: pointer;
     margin-top: 25px;
     font-weight: bold;
+    font-size: large;
 }
 
 #joinForm button:hover {
@@ -623,7 +624,7 @@ section {
 
 .membership-card button {
     background-color: var(--color-five);
-    color: var(--color-two);
+    color: black;
     padding: 10px 15px;
     border: none;
     cursor: pointer;
@@ -631,6 +632,7 @@ section {
     font-weight: bold;
     font-family: var(--paragraph-font);
     transition: background-color 0.3s ease;
+    font-size: large;
 }
 
 .membership-card button:hover {
@@ -662,8 +664,7 @@ section {
     text-align: center;
     max-width: 400px;
     position: relative;
-    /*box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);*/
-    /*font-family: var(--heading-font), sans-serif;*/
+
     color: var(--color-four);
 }
 
@@ -673,7 +674,7 @@ section {
     right: 15px;
     font-size: 26px;
     cursor: pointer;
-    color: var(--color-one);
+    color: black;
     font-weight: bold;
     background-color: var(--color-five);
 
@@ -696,14 +697,14 @@ footer {
     padding: 4px;
 }
 
-.left-footer {
+.left-foot {
     flex: 1;
     text-align: left;
     color: var(--color-one);
     /*margin: 2px;*/
 }
 
-.left-footer p {
+.left-foot p {
     line-height: 1;
     gap: 2px;
     margin: 0;
@@ -733,7 +734,7 @@ footer {
     object-fit: contain;
 }
 
-.right-footer {
+.right-foot {
     flex: 1;
     display: flex;
     flex-direction: column;
@@ -743,7 +744,7 @@ footer {
     gap: 4px;
 }
 
-.right-footer p {
+.right-foot p {
     line-height: 1;
     gap: 2px;
     margin: 0;
@@ -786,50 +787,6 @@ footer {
     color: var(--color-one);
 }
 
-/* Membership Cards Styling */
-/*.membership-cards {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-}
-
-.membership-card {
-    background-color: var(--color-one);
-    color: var(--color-four);
-    border: 2px solid var(--color-three);
-    border-radius: 8px;
-    padding: 20px;
-    text-align: center;
-    width: 100%;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
-}
-
-.membership-card h3 {
-    font-family: var(--heading-font);
-    color: var(--color-two);
-    margin-bottom: 10px;
-}
-
-.membership-card p {
-    color: var(--color-four);
-    margin-bottom: 15px;
-}
-
-.membership-card button {
-    background-color: var(--color-five);
-    color: var(--color-one);
-    padding: 10px 15px;
-    border: none;
-    cursor: pointer;
-    border-radius: 4px;
-    font-weight: bold;
-    font-family: var(--paragraph-font);
-    transition: background-color 0.3s ease;
-}
-
-.membership-card button:hover {
-    background-color: var(--color-two);
-}*/
 
 /* Responsive Design */
 @media (max-width: 768px) {
